# MarkitDown_Converter

./: .gitignore  MarkitDown_Converter.bat  README.md  convert_to_markdown.py  markitdown_app.py  pyproject.toml  requirements.txt  sample.txt
.github/: FUNDING.yml
